# my_app

./: CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  FinderTask.cpp  FinderTask.h  ITask.h  MyScheduler.cpp  MyScheduler.h  MySystemTrayIcon.cpp  MySystemTrayIcon.h  PrinterTask.cpp  PrinterTask.h  README.md  Scheduler.cpp  Scheduler.h  SettingsFactory.cpp  SettingsFactory.h  SettingsManager.cpp  SettingsManager.h  SystemTrayIcon.cpp  SystemTrayIcon.h  Task.cpp  Task.h  main.cpp  my_app.pro  my_app.qrc  task_timer_settings.ini
src/tasks/: AbstractTask.h  FinderTask.cpp  FinderTask.h  ITask.h  PrinterTask.cpp  PrinterTask.h  PrinterTaskStatus.cpp  PrinterTaskStatus.h  PrinterTaskWindow.cpp  PrinterTaskWindow.h  README.md
